Get pins status
