# src/controllers/pinsController.js
@@ -1,0 +1,8 @@
+import SmoothieboardInterface from '../lib/smoothieboardInterface'
+
+export function getPinsStatus(request, response){
+	SmoothieboardInterface.sendCommand()
+	response.send({
+		message: 'Ok'
+	})
+}
