# src/swagger.yaml
@@ -94,6 +94,24 @@ paths:
           description: "Bad Request."
         500:
           description: "Internal Server Error."
+  /pinsStatus:
+    x-swagger-router-controller: pinsController
+    get:
+      summary: "Status of the pins."
+      description: "Get current status of the motor pins."
+      operationId: getPinsStatus
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters: []
+      responses:
+        200:
+          description: "Success"
+        400:
+          description: "Bad Request."
+        500:
+          description: "Internal Server Error."
 
 definitions:
   Position:
